# FruitFlowerClassifier

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/sujoy/flowerrecogniser/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: labels-fruit.txt
app/src/main/cpp/: imageutils_jni.cc  rgb2yuv.cc  rgb2yuv.h  yuv2rgb.cc  yuv2rgb.h
app/src/main/java/com/example/sujoy/flowerrecogniser/: AutoFitTextureView.java  CameraActivity.java  CameraConnectionFragment.java  Classifier.java  ClassifierActivity.java  FruitClassifierActivity.java  LegacyCameraConnectionFragment.java  OverlayView.java  RecognitionScoreView.java  ResultsView.java  TensorFlowImageClassifier.java
app/src/main/java/com/example/sujoy/flowerrecogniser/env/: BorderedText.java  ImageUtils.java  Logger.java  Size.java  SplitTimer.java
app/src/main/res/animator/: color_animation.xml
app/src/main/res/layout/: activity_main.xml  camera_connection_fragment.xml
app/src/main/res/values/: base-strings.xml
app/src/test/java/com/example/sujoy/flowerrecogniser/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
